fix long lines and ensure that they get wrapped around

--- a/public/stylesheets/sass/_publication_common.sass
+++ b/public/stylesheets/sass/_publication_common.sass
@@ -36,6 +36,7 @@ a.owner
 .text_element
   padding: 0px
   margin: 0px
+  white-space: pre-line
   font-family: 'Lato', serif
   font-size: 14px
   font-style: normal
@@ -47,7 +48,7 @@ a.owner
   word-spacing: 0em
   line-height: 1.2
 /* Set this once the editor is more WYSIWYG
-/*   overflow: hidden
+/*  overflow: hidden
 
 .twitter_element
   font-family: 'Yanone Kaffeesatz', serif
